refactor: clean up services and remove unused methods